name:                Expr
version:             0.1.0.0
synopsis:            Simple generic expression types
description:         Please see README.md
homepage:            https://github.com/oisdk/Expr#readme
license:             MIT
license-file:        LICENSE
author:              Donnacha Oisin Kidney
maintainer:          oisin.kidney@gmail.com
copyright:           2016 Donnacha Oisin Kidney
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Expr
  build-depends:       base >= 4.7 && < 5
                     , cereal
                     , QuickCheck
                     , lens
                     , recursion-schemes
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite Expr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             expr-tests.hs
  build-depends:       base
                     , Expr
                     , QuickCheck
                     , cereal
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Expr
