name:                Expr
version:             0.1.0.0
synopsis:            Simple generic expression types
description:         Please see README.md
homepage:            https://github.com/oisdk/Expr
license:             MIT
license-file:        LICENSE
author:              Donnacha Oisin Kidney
maintainer:          oisin.kidney@gmail.com
copyright:           2016 Donnacha Oisin Kidney
category:            Data
build-type:          Simple

cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Expr
  other-modules:       Numeric.Expr.ExprF
                     , Numeric.Expr.MathML
                     , Numeric.Expr.Algs
                     , Numeric.Expr.ExprType
                     , Numeric.Expr.Parse
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck >= 2.8
                     , lens >= 4.13
                     , recursion-schemes >= 5
                     , recursion-schemes-extras
                     , taggy >= 0.2
                     , text >= 1.2
                     , parsers >= 0.12
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite Expr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             expr-tests.hs
  build-depends:       base >= 4.8
                     , Expr
                     , QuickCheck >= 2.8
                     , trifecta >= 1.5
                     , parsers >= 0.12
                     , doctest >= 0.10
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oisdk/Expr
