name:                expr-playgrounds
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/oisdk/expr-playgrounds#readme
license:             MIT
license-file:        LICENSE
author:              Donnacha Oisín Kidney
maintainer:          mail@doisinkidney.com
copyright:           2016 Donnacha Oisín Kidney
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Expr
  build-depends:       base >= 4.7 && < 5
                     , lens >= 4.15
                     , recursion-schemes >= 5
                     , constraints >= 0.9
                     , parsers >= 0.12
                     , trifecta >= 1.6
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite expr-playgrounds-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , expr-playgrounds
                     , QuickCheck >= 2.8
                     , doctest >= 0.11
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oisdk/expr-playgrounds
